===v6.2.4===
 * Added DogTags for string.gsub and string.find.
 * Added Yu'lon's Barrier to the DamageShield equivalency.

 * Bug Fixes:
 ** IconModule_Alpha\Alpha.lua:84: attempt to index local "IconModule_Alpha" (a nil value)

===v6.2.3===
 * **Important**: The color settings for all timer bars (including bar group and timer overlay bars) have changed a bit:
 ** The labels for these settings now correctly correspond to the state that they will be used for.
 ** The colors will automatically switch when you enable the "Fill bar up" setting for a bar.
 ** These changes will probably require you to reconfigure some of your settings.

 * Icons in groups that use the Bar display method can now have their colors configured on a per-icon basis.
 ** You can copy colors between icons by right-click dragging one icon to another.

 * TellMeWhen now uses a coroutine-based update engine to help prevent the occasional "script ran too long" error.
 ** This version also includes an updated LibDogTag-3.0 and LibDogTag-Unit-3.0 that should no longer throw "script ran too long" errors.

 * Bug Fixes:
 ** Removed the "Snared" Loss of Control category from the configuration since it is most certainly not used by Blizzard.
 ** Item-tracking icons and condition should now always get the correct data once it becomes available.

===v6.2.2===
 * Buff/Debuff icons can now sort by stacks.
 * The group sorting option to sort by duration now treats spells that are on the GCD as having no cooldown.

 * Added a few more popup notifications when invalid settings/actions are entered/performed.
 * Icons will now be automatically enabled when you select an icon type.
 * Incorporated LibDogTag-Stats-3.0 into TellMeWhen's various implementations of LibDogTag-3.0.